--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,9 +1,7 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css",
     "/js/home.js": "/js/home.js",
     "/js/study.js": "/js/study.js",
-    "/js/about.js": "/js/about.js",
     "/js/study.basic.js": "/js/study.basic.js",
     "/js/study.php.js": "/js/study.php.js",
     "/js/study.html.js": "/js/study.html.js",
@@ -11,5 +9,6 @@
     "/js/community.js": "/js/community.js",
     "/js/community.free.js": "/js/community.free.js",
     "/js/community.qna.js": "/js/community.qna.js",
-    "/js/community.notice.js": "/js/community.notice.js"
+    "/js/community.notice.js": "/js/community.notice.js",
+    "/css/app.css": "/css/app.css"
 }
