--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     },
     "dependencies": {
         "bootstrap-icons": "^1.5.0",
+        "vue-cookies": "^1.7.4",
         "vue-router": "^3.5.2",
         "vuex": "^3.6.2"
     }
